Satisfy pre-commit hook issues

--- a/notebook/Work Packages/Deliverable_WP1_Colorimetric Classifier_ASYN.ipynb
+++ b/notebook/Work Packages/Deliverable_WP1_Colorimetric Classifier_ASYN.ipynb
@@ -9,26 +9,38 @@
    "source": [
     "# Change directory so 'Polygeist' is in the path.\n",
     "import os\n",
+    "\n",
     "os.chdir(\"../..\")\n",
     "\n",
-    "# OS & Utilities \n",
-    "from glob import glob\n",
     "import pathlib\n",
     "import random\n",
     "import shutil\n",
     "import time\n",
-    "from pqdm.processes import pqdm\n",
+    "\n",
+    "# OS & Utilities\n",
+    "from glob import glob\n",
     "\n",
     "# Maths, Image, Science Libraries\n",
     "import imageio.v3 as io\n",
-    "from sklearn import metrics\n",
     "import numpy as np\n",
+    "from pqdm.processes import pqdm\n",
+    "from sklearn import metrics\n",
     "\n",
     "# Polygeist libraries\n",
     "import polygeist.colour as pc\n",
+    "from polygeist.slidecore.slide import (\n",
+    "    AperioSlide,\n",
+    "    SpectralSlideGenerator,\n",
+    "    SyntheticSlide,\n",
+    ")\n",
     "from polygeist.training import train_model\n",
-    "from polygeist.utils import plot_roc, collect_cases, calc_median_score_list, region_count_score_list, load_filenames_and_generate_conditions\n",
-    "from polygeist.slidecore.slide import AperioSlide, SpectralSlideGenerator, SyntheticSlide"
+    "from polygeist.utils import (\n",
+    "    calc_median_score_list,\n",
+    "    collect_cases,\n",
+    "    load_filenames_and_generate_conditions,\n",
+    "    plot_roc,\n",
+    "    region_count_score_list,\n",
+    ")"
    ]
   },
   {
@@ -102,7 +114,9 @@
     "# Eosin\n",
     "E = pc.Illuminant.from_file_with_range(\"spectral/histology//Eosin6um.csv\", ms.wl)\n",
     "# Healthy Brain Absorption\n",
-    "_B = pc.Illuminant.from_file_with_range(\"spectral/histology/HealthyBrainAbsorption9um.csv\", ms.wl)"
+    "_B = pc.Illuminant.from_file_with_range(\n",
+    "    \"spectral/histology/HealthyBrainAbsorption9um.csv\", ms.wl\n",
+    ")"
    ]
   },
   {
@@ -114,7 +128,7 @@
    "source": [
     "# Calculate the Transmission Function for the brain\n",
     "_B[np.isnan(_B)] = 0\n",
-    "B = 1. - (_B / np.max(_B))"
+    "B = 1.0 - (_B / np.max(_B))"
    ]
   },
   {
@@ -128,15 +142,15 @@
     "responses = np.vstack([ms.response(s) for s in [DAB, H, ms.ls, B, E]])\n",
     "print(responses)\n",
     "\n",
-    "#These are sensor specific responses for the brain transmission * filter responses,\n",
-    "#for the AT2 sensor and lightsource.\n",
-    "#See reports for how to generate them for other sensing systems.\n",
+    "# These are sensor specific responses for the brain transmission * filter responses,\n",
+    "# for the AT2 sensor and lightsource.\n",
+    "# See reports for how to generate them for other sensing systems.\n",
     "\n",
-    "#7.10357511 12.61506218 13.59695489  # DAB\n",
-    "#8.81961536 10.18302502  5.08567669  # Hematoxylin \n",
-    "#11.02074647 15.41804066 12.77042165 # Light Source\n",
-    "#17.05035857 17.64819458  9.17788779 # Brain Transmission\n",
-    "#0.45574971  4.32897163  1.68161384  # Eosin"
+    "# 7.10357511 12.61506218 13.59695489  # DAB\n",
+    "# 8.81961536 10.18302502  5.08567669  # Hematoxylin\n",
+    "# 11.02074647 15.41804066 12.77042165 # Light Source\n",
+    "# 17.05035857 17.64819458  9.17788779 # Brain Transmission\n",
+    "# 0.45574971  4.32897163  1.68161384  # Eosin"
    ]
   },
   {
@@ -173,7 +187,9 @@
     "if simulated_data:\n",
     "    image = SpectralSlideGenerator(width=100, height=100).image\n",
     "else:\n",
-    "    image = AperioSlide(example_slide_path).get_slide_with_pixel_resolution_in_microns(2.0)"
+    "    image = AperioSlide(example_slide_path).get_slide_with_pixel_resolution_in_microns(\n",
+    "        2.0\n",
+    "    )"
    ]
   },
   {
@@ -239,7 +255,7 @@
     "# Show our decomposition\n",
     "fig, axs = plt.subplots(2, 2)\n",
     "\n",
-    "fig.suptitle('Comparisons between Original, Decomposed & Isolated Signals')\n",
+    "fig.suptitle(\"Comparisons between Original, Decomposed & Isolated Signals\")\n",
     "axs[0, 0].set_title(\"RGB Image\")\n",
     "axs[0, 0].imshow(image.astype(int))\n",
     "axs[0, 1].set_title(\"DAB Estimate\")\n",
@@ -269,27 +285,29 @@
    "outputs": [],
    "source": [
     "config = {\n",
-    "     # The threshold level in RGB to use for our prexisting RGB thresholding routines from Phase 1   \n",
-    "    'B_channel_threshold': 20,\n",
-    "     # This is where we will be storing our segmeneted data\n",
-    "    'dump_path': '/run/media/brad/ScratchM2/maps_dump_512_jpeg/', # maps_dump_512_jpeg\n",
-    "     # This is our window size, over which we will iterate.\n",
-    "    'map_stride': 512,\n",
-    "     # Our negative cases, our controls, are stored in the 'Controls' folder\n",
-    "    'negative_case_folder': 'Controls',\n",
-    "     # Our positive, pd cases, are stored in the 'PD' folder\n",
-    "    'positive_case_folder': 'PD',\n",
-    "     # Other search paths to look for cases\n",
-    "    'search_directories': ['/run/media/brad/TBSSD1/A-syn cases/', '/run/media/brad/TBSSD2/A-syn cases/'],\n",
+    "    # The threshold level in RGB to use for our prexisting RGB thresholding routines from Phase 1\n",
+    "    \"B_channel_threshold\": 20,\n",
+    "    # This is where we will be storing our segmeneted data\n",
+    "    \"dump_path\": \"/run/media/brad/ScratchM2/maps_dump_512_jpeg/\",  # maps_dump_512_jpeg\n",
+    "    # This is our window size, over which we will iterate.\n",
+    "    \"map_stride\": 512,\n",
+    "    # Our negative cases, our controls, are stored in the 'Controls' folder\n",
+    "    \"negative_case_folder\": \"Controls\",\n",
+    "    # Our positive, pd cases, are stored in the 'PD' folder\n",
+    "    \"positive_case_folder\": \"PD\",\n",
+    "    # Other search paths to look for cases\n",
+    "    \"search_directories\": [\n",
+    "        \"/run/media/brad/TBSSD1/A-syn cases/\",\n",
+    "        \"/run/media/brad/TBSSD2/A-syn cases/\",\n",
+    "    ],\n",
     "    # These are our case filenames\n",
-    "    \"case_files\" : \"Data/filenames/asyn_files.txt\",\n",
+    "    \"case_files\": \"Data/filenames/asyn_files.txt\",\n",
     "    # For use with real data, this filters slides with the wrong index\n",
     "    \"slide_index_filter\": \"17_A\",\n",
     "    # Toggle this is you are using simulated data\n",
-    "    'simulated' : simulated_data,\n",
+    "    \"simulated\": simulated_data,\n",
     "    # Number to simulate\n",
-    "    'simulation_n' : 4\n",
-    "    \n",
+    "    \"simulation_n\": 4,\n",
     "}"
    ]
   },
@@ -300,19 +318,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def spectral_decompose_and_dump_jpeg(slice, stride=1000, process_raw=True, threshold=.175, pc=0.0375,\n",
-    "                                     raw_threshold=-.3, raw_pc=.00125, jpeg_dump_path_and_name=\"start_name\"):\n",
+    "def spectral_decompose_and_dump_jpeg(\n",
+    "    slice,\n",
+    "    stride=1000,\n",
+    "    process_raw=True,\n",
+    "    threshold=0.175,\n",
+    "    pc=0.0375,\n",
+    "    raw_threshold=-0.3,\n",
+    "    raw_pc=0.00125,\n",
+    "    jpeg_dump_path_and_name=\"start_name\",\n",
+    "):\n",
     "\n",
     "    # These are sensor specific responses for the brain transmission * filter responses, for the AT2 sensor\n",
     "    # and lightsource.  See reports for how to generate them for other sensing systems\n",
-    "    responses = np.array(np.matrix(\"[ 7.10357511 12.61506218 13.59695489 ; \"  # DAB\n",
-    "                                   \"8.81961536 10.18302502  5.08567669; \"  # Hematoxylin \n",
-    "                                   \"11.02074647 15.41804066 12.77042165 ; \"  # Light Source\n",
-    "                                   \"17.05035857 17.64819458  9.17788779; \"  # Brain Transmission\n",
-    "                                   \"0.45574971  4.32897163  1.68161384]\"))  # Eosin\n",
+    "    responses = np.array(\n",
+    "        np.matrix(\n",
+    "            \"[ 7.10357511 12.61506218 13.59695489 ; \"  # DAB\n",
+    "            \"8.81961536 10.18302502  5.08567669; \"  # Hematoxylin\n",
+    "            \"11.02074647 15.41804066 12.77042165 ; \"  # Light Source\n",
+    "            \"17.05035857 17.64819458  9.17788779; \"  # Brain Transmission\n",
+    "            \"0.45574971  4.32897163  1.68161384]\"\n",
+    "        )\n",
+    "    )  # Eosin\n",
     "\n",
     "    # Get slide at native resolution\n",
-    "    image = slice.get_slide_with_pixel_resolution_in_microns(2.)\n",
+    "    image = slice.get_slide_with_pixel_resolution_in_microns(2.0)\n",
     "\n",
     "    # Get the height and width of the slice\n",
     "    yy, xx, _ = image.shape\n",
@@ -338,8 +368,8 @@
     "        raw_DAB = DAB - BT\n",
     "        raw_DAB = raw_DAB.reshape(image.shape[0], image.shape[1])\n",
     "    else:\n",
-    "        mDAB = colourmap_1d(np.array([1., 1., 0.]), np.array([0., 0., 1.]), DAB)\n",
-    "        mBT = colourmap_1d(np.array([1., 1., 0.]), np.array([0., 0., 1.]), BT)\n",
+    "        mDAB = colourmap_1d(np.array([1.0, 1.0, 0.0]), np.array([0.0, 0.0, 1.0]), DAB)\n",
+    "        mBT = colourmap_1d(np.array([1.0, 1.0, 0.0]), np.array([0.0, 0.0, 1.0]), BT)\n",
     "        m_DAB = mDAB - mBT\n",
     "        raw_DAB = m_DAB.reshape(image.shape[0], image.shape[1], 3)\n",
     "\n",
@@ -350,24 +380,29 @@
     "        for xi, x in enumerate(np.arange(0, xx, stride)):\n",
     "            for yi, y in enumerate(np.arange(0, yy, stride)):\n",
     "                # Grab this section x -> x + stride, y -> y + stride\n",
-    "                section = raw_DAB[y:y + stride, x:x + stride]\n",
+    "                section = raw_DAB[y : y + stride, x : x + stride]\n",
     "\n",
     "                diff = np.abs(\n",
-    "                    section[:, :, 0].astype(float)\n",
-    "                    - section[:, :, 2].astype(float)\n",
+    "                    section[:, :, 0].astype(float) - section[:, :, 2].astype(float)\n",
     "                )\n",
-    "                if np.sum(diff > threshold) / (stride ** 2) > pc:\n",
-    "                    io.imwrite(f\"{jpeg_dump_path_and_name}{dump_number}.jpg\", image[y:y + stride, x:x + stride, :])\n",
+    "                if np.sum(diff > threshold) / (stride**2) > pc:\n",
+    "                    io.imwrite(\n",
+    "                        f\"{jpeg_dump_path_and_name}{dump_number}.jpg\",\n",
+    "                        image[y : y + stride, x : x + stride, :],\n",
+    "                    )\n",
     "                    dump_number += 1\n",
     "    else:\n",
     "        # Tumble over the slice using a fixed window size\n",
     "        for xi, x in enumerate(np.arange(0, xx, stride)):\n",
     "            for yi, y in enumerate(np.arange(0, yy, stride)):\n",
     "                # Grab this section x -> x + stride, y -> y + stride\n",
-    "                section = raw_DAB[y:y + stride, x:x + stride] < raw_threshold\n",
+    "                section = raw_DAB[y : y + stride, x : x + stride] < raw_threshold\n",
     "\n",
     "                if np.mean(section) > raw_pc:\n",
-    "                    io.imwrite(f\"{jpeg_dump_path_and_name}{dump_number}.jpg\", image[y:y + stride, x:x + stride, :])\n",
+    "                    io.imwrite(\n",
+    "                        f\"{jpeg_dump_path_and_name}{dump_number}.jpg\",\n",
+    "                        image[y : y + stride, x : x + stride, :],\n",
+    "                    )\n",
     "                    dump_number += 1\n",
     "    return densities"
    ]
@@ -393,9 +428,9 @@
     "    d = spectral_decompose_and_dump_jpeg(\n",
     "        slide,\n",
     "        stride=config[\"map_stride\"],\n",
-    "        jpeg_dump_path_and_name=f'{config[\"dump_path\"]}/{cnd}/{file_name}'\n",
+    "        jpeg_dump_path_and_name=f'{config[\"dump_path\"]}/{cnd}/{file_name}',\n",
     "    )\n",
-    "    with open(f'{config[\"dump_path\"]}/{cnd}/{file_name}.npy', 'wb') as f:\n",
+    "    with open(f'{config[\"dump_path\"]}/{cnd}/{file_name}.npy', \"wb\") as f:\n",
     "        np.save(f, d)\n",
     "\n",
     "    return file"
@@ -409,37 +444,53 @@
    "outputs": [],
    "source": [
     "# Make the directory structure to save our files\n",
-    "for pth in [config[\"positive_case_folder\"],\n",
-    "            config[\"negative_case_folder\"]]:\n",
+    "for pth in [config[\"positive_case_folder\"], config[\"negative_case_folder\"]]:\n",
     "    pathlib.Path(config[\"dump_path\"] + pth).mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "files_list_and_configuration = []\n",
     "# For each case in positive/negative case directories, or for simulated data\n",
-    "if not config['simulated']:\n",
+    "if not config[\"simulated\"]:\n",
     "    for cases in [config[\"positive_case_folder\"], config[\"negative_case_folder\"]]:\n",
     "        for searched_path in config[\"search_directories\"]:\n",
     "            for p in glob(searched_path + cases + \"/*/\", recursive=True):\n",
     "                for f in glob(p + \"/*.svs\", recursive=True):\n",
     "                    if config[\"slide_index_filter\"] in f:\n",
-    "                        files_list_and_configuration.append({\n",
-    "                            \"file\": f,\n",
-    "                            \"condition\": cases,\n",
-    "                            \"sim\": False,\n",
-    "                            })\n",
+    "                        files_list_and_configuration.append(\n",
+    "                            {\n",
+    "                                \"file\": f,\n",
+    "                                \"condition\": cases,\n",
+    "                                \"sim\": False,\n",
+    "                            }\n",
+    "                        )\n",
     "else:\n",
     "    for i in np.arange(0, config[\"simulation_n\"]):\n",
     "        # Which condition to generate, PD or Control\n",
-    "        condition = config[\"positive_case_folder\"] if np.random.random() > .5 else config[\"negative_case_folder\"]\n",
+    "        condition = (\n",
+    "            config[\"positive_case_folder\"]\n",
+    "            if np.random.random() > 0.5\n",
+    "            else config[\"negative_case_folder\"]\n",
+    "        )\n",
     "        # We will use the dataset name conv for our slides.\n",
-    "        name_for_slide = 'PD' if 'PD' in condition else 'PDC'\n",
+    "        name_for_slide = \"PD\" if \"PD\" in condition else \"PDC\"\n",
     "        # Generate a new slide and save it to disk\n",
-    "        SpectralSlideGenerator(512 * 4, 512 * 4, filename=f\"{config['dump_path']}/{name_for_slide}{i}-17_A.png\", control='C' in name_for_slide)\n",
+    "        SpectralSlideGenerator(\n",
+    "            512 * 4,\n",
+    "            512 * 4,\n",
+    "            filename=f\"{config['dump_path']}/{name_for_slide}{i}-17_A.png\",\n",
+    "            control=\"C\" in name_for_slide,\n",
+    "        )\n",
     "        # Append and continue\n",
-    "        files_list_and_configuration.append({\"file\" : f\"{config['dump_path']}/{name_for_slide}{i}-17_A.png\",\n",
-    "                                             \"condition\": condition,\n",
-    "                                             \"sim\": True})\n",
-    "        \n",
-    "result = pqdm(files_list_and_configuration, process, n_jobs=1) # 1 job for AJAX optimistion"
+    "        files_list_and_configuration.append(\n",
+    "            {\n",
+    "                \"file\": f\"{config['dump_path']}/{name_for_slide}{i}-17_A.png\",\n",
+    "                \"condition\": condition,\n",
+    "                \"sim\": True,\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "result = pqdm(\n",
+    "    files_list_and_configuration, process, n_jobs=1\n",
+    ")  # 1 job for AJAX optimistion"
    ]
   },
   {
@@ -454,7 +505,7 @@
     "positive_cases = []\n",
     "negative_cases = []\n",
     "for case, condition in case_conditions.items():\n",
-    "    positive_cases.append(case) if 'C' not in condition else negative_cases.append(case) "
+    "    positive_cases.append(case) if \"C\" not in condition else negative_cases.append(case)"
    ]
   },
   {
@@ -488,12 +539,14 @@
     "positive_score_list = calc_median_score_list(\n",
     "    positive_cases,\n",
     "    f'{config[\"dump_path\"]}/{config[\"positive_case_folder\"]}/*17_*.jpg',\n",
-    "    rgb_threshold=config[\"B_channel_threshold\"])\n",
+    "    rgb_threshold=config[\"B_channel_threshold\"],\n",
+    ")\n",
     "\n",
     "negative_score_list = calc_median_score_list(\n",
     "    negative_cases,\n",
     "    f'{config[\"dump_path\"]}/{config[\"negative_case_folder\"]}/*17_*.jpg',\n",
-    "    rgb_threshold=config[\"B_channel_threshold\"])"
+    "    rgb_threshold=config[\"B_channel_threshold\"],\n",
+    ")"
    ]
   },
   {
@@ -504,10 +557,12 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "ax = plot_roc(np.array(positive_score_list),\n",
-    "              np.array(negative_score_list),\n",
-    "              verbose=False,\n",
-    "              title=\"Threshold of Median Scores Per Case ROC Curve\")\n",
+    "ax = plot_roc(\n",
+    "    np.array(positive_score_list),\n",
+    "    np.array(negative_score_list),\n",
+    "    verbose=False,\n",
+    "    title=\"Threshold of Median Scores Per Case ROC Curve\",\n",
+    ")\n",
     "plt.show()"
    ]
   },
@@ -521,7 +576,7 @@
     "# Plot the median Counts\n",
     "fig, ax = plt.subplots()\n",
     "ax.boxplot([negative_score_list, positive_score_list], showfliers=False)\n",
-    "ax.set_xticks([1, 2], ['Control', 'PD'])\n",
+    "ax.set_xticks([1, 2], [\"Control\", \"PD\"])\n",
     "plt.xlabel(\"Condition\")\n",
     "plt.ylabel(\"Quartiles of ROIs Identified\")"
    ]
@@ -533,7 +588,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = np.hstack([np.ones(len(positive_score_list)), np.zeros(len(negative_score_list))])\n",
+    "labels = np.hstack(\n",
+    "    [np.ones(len(positive_score_list)), np.zeros(len(negative_score_list))]\n",
+    ")\n",
     "outputs = np.hstack([positive_score_list, negative_score_list])"
    ]
   },
@@ -561,7 +618,7 @@
     "plt.ylabel(\"Hit Rate\", fontsize=18)\n",
     "plt.yticks(fontsize=18)\n",
     "plt.xticks(fontsize=18)\n",
-    "#plt.title(\"512um Patch Level Discrmination between Taupathology and Control Tau Segmentation\") \n",
+    "# plt.title(\"512um Patch Level Discrmination between Taupathology and Control Tau Segmentation\")\n",
     "plt.show()"
    ]
   },
@@ -573,7 +630,7 @@
    "outputs": [],
    "source": [
     "def descriptives(scores):\n",
-    "    px = 512 **2\n",
+    "    px = 512**2\n",
     "    mu = np.median(scores)\n",
     "    p95 = np.percentile(scores, 95)\n",
     "    print(f\"mu : {(mu / px)*100}, 95pc: {(p95 / px)*100}\")"
@@ -609,11 +666,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
