--- a/notebook/Work Packages/Deliverable_WP2_Colorimetric_Analysis_Tau_ABeta.ipynb
+++ b/notebook/Work Packages/Deliverable_WP2_Colorimetric_Analysis_Tau_ABeta.ipynb
@@ -18,12 +18,18 @@
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
-    "import matplotlib\n",
-    "from matplotlib import pyplot as plt\n",
-    "import numpy as np\n",
     "import os\n",
+    "\n",
+    "import matplotlib\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
     "os.chdir(\"../..\")\n",
-    "from polygeist.utils import get_case_and_slide, load_jsons_from_directory, load_filenames_and_generate_conditions"
+    "from polygeist.utils import (\n",
+    "    get_case_and_slide,\n",
+    "    load_filenames_and_generate_conditions,\n",
+    "    load_jsons_from_directory,\n",
+    ")"
    ]
   },
   {
@@ -57,10 +63,12 @@
    "outputs": [],
    "source": [
     "# Labels used for each condition produced by load_filenames_and_generate_conditions\n",
-    "CONTROL = 'C'\n",
-    "AD = 'AD'\n",
-    "PD = 'PD'\n",
-    "MSA = 'MSA'\n",
+    "CONTROL = \"C\"\n",
+    "AD = \"AD\"\n",
+    "PD = \"PD\"\n",
+    "MSA = \"MSA\"\n",
+    "\n",
+    "\n",
     "def slide_statistics_for_slide(jsons, slide_filter=None, norm=True):\n",
     "    control = []\n",
     "    ad = []\n",
@@ -71,9 +79,9 @@
     "        if slide_filter:\n",
     "            if slide != slide_filter:\n",
     "                continue\n",
-    "        arr = np.array(jsons[file]['densities'])\n",
+    "        arr = np.array(jsons[file][\"densities\"])\n",
     "        n = 1 if not norm else arr.shape[0] * arr.shape[1]\n",
-    "        h = jsons[file]['roi_count'] / n\n",
+    "        h = jsons[file][\"roi_count\"] / n\n",
     "        if case in case_conditions:\n",
     "            condition = case_conditions[case]\n",
     "            if condition == CONTROL:\n",
@@ -100,18 +108,20 @@
     "    # Create a list to be writeen to file\n",
     "    csv_table = [\"case, score, slide, condition\\n\"]\n",
     "    conditon_map = {\n",
-    "        \"C\" : 0,\n",
+    "        \"C\": 0,\n",
     "        \"PD\": 1,\n",
     "        \"AD\": 2,\n",
-    "        \"MSA\":3,\n",
+    "        \"MSA\": 3,\n",
     "    }\n",
     "    for file in jsons.keys():\n",
     "        case, slide = get_case_and_slide(file)\n",
     "        condition = case_conditions[case]\n",
-    "        row = f\"{case}, {jsons[file]['roi_count']}, {slide}, {conditon_map[condition]}\\n\"\n",
+    "        row = (\n",
+    "            f\"{case}, {jsons[file]['roi_count']}, {slide}, {conditon_map[condition]}\\n\"\n",
+    "        )\n",
     "        csv_table.append(row)\n",
-    "    \n",
-    "    with open(filename, 'w') as f:\n",
+    "\n",
+    "    with open(filename, \"w\") as f:\n",
     "        for r in csv_table:\n",
     "            f.write(r)"
    ]
@@ -123,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jsons = load_jsons_from_directory(config['dump_path'])"
+    "jsons = load_jsons_from_directory(config[\"dump_path\"])"
    ]
   },
   {
@@ -134,11 +144,18 @@
    "outputs": [],
    "source": [
     "norm_rois = True\n",
-    "control, ad, pd, msa = slide_statistics_for_slide(jsons, slide_filter=None, norm=norm_rois)\n",
+    "control, ad, pd, msa = slide_statistics_for_slide(\n",
+    "    jsons, slide_filter=None, norm=norm_rois\n",
+    ")\n",
     "fig, ax = plt.subplots()\n",
     "ax.boxplot([control, pd, ad], showfliers=False)\n",
-    "ax.set_xticks([1, 2, 3], ['Control', 'PD', 'AD+PD'])\n",
-    "set_labels(ax, \"Pathology Condition\", f\"Quartiles of ROI {'Counts' if not norm_rois else 'Proportions'}\", \"\")\n",
+    "ax.set_xticks([1, 2, 3], [\"Control\", \"PD\", \"AD+PD\"])\n",
+    "set_labels(\n",
+    "    ax,\n",
+    "    \"Pathology Condition\",\n",
+    "    f\"Quartiles of ROI {'Counts' if not norm_rois else 'Proportions'}\",\n",
+    "    \"\",\n",
+    ")\n",
     "plt.show()"
    ]
   },
@@ -162,10 +179,12 @@
     "# subplots\n",
     "fig, axs = plt.subplots(2, 5, sharey=True)\n",
     "for i, ind in enumerate(slides_abeta):\n",
-    "    control, ad, pd, msa = slide_statistics_for_slide(jsons, slide_filter=ind, norm=norm_rois)\n",
+    "    control, ad, pd, msa = slide_statistics_for_slide(\n",
+    "        jsons, slide_filter=ind, norm=norm_rois\n",
+    "    )\n",
     "    ax = axs[int(i / 5)][i % 5]\n",
     "    ax.boxplot([control, pd, ad], showfliers=False)\n",
-    "    ax.set_xticks([1, 2, 3], ['Control', 'PD', 'AD+PD'])\n",
+    "    ax.set_xticks([1, 2, 3], [\"Control\", \"PD\", \"AD+PD\"])\n",
     "    ax.set_title(f\"Slide {ind}\")\n",
     "plt.savefig(\"pathology_by_slide.svg\")\n",
     "plt.show()"
@@ -179,7 +198,7 @@
    "outputs": [],
    "source": [
     "# Write the CSV out to do stats in JASP.\n",
-    "slide_statistics_to_csv(jsons, 'abeta_counts.csv')"
+    "slide_statistics_to_csv(jsons, \"abeta_counts.csv\")"
    ]
   },
   {
@@ -213,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jsons = load_jsons_from_directory(config['dump_path'])"
+    "jsons = load_jsons_from_directory(config[\"dump_path\"])"
    ]
   },
   {
@@ -224,11 +243,18 @@
    "outputs": [],
    "source": [
     "norm_rois = True\n",
-    "control, ad, pd, _ = slide_statistics_for_slide(jsons, slide_filter=None, norm=norm_rois)\n",
+    "control, ad, pd, _ = slide_statistics_for_slide(\n",
+    "    jsons, slide_filter=None, norm=norm_rois\n",
+    ")\n",
     "fig, ax = plt.subplots()\n",
     "ax.boxplot([control, pd, ad], showfliers=False)\n",
-    "ax.set_xticks([1, 2, 3], ['Control', 'PD', 'AD+PD'])\n",
-    "set_labels(ax, \"Pathology Condition\", f\"Quartiles of ROI {'Counts' if not norm_rois else 'Proportions'}\", \"\")\n",
+    "ax.set_xticks([1, 2, 3], [\"Control\", \"PD\", \"AD+PD\"])\n",
+    "set_labels(\n",
+    "    ax,\n",
+    "    \"Pathology Condition\",\n",
+    "    f\"Quartiles of ROI {'Counts' if not norm_rois else 'Proportions'}\",\n",
+    "    \"\",\n",
+    ")\n",
     "plt.show()"
    ]
   },
@@ -252,10 +278,12 @@
     "# subplots\n",
     "fig, axs = plt.subplots(2, 5, sharey=True)\n",
     "for i, ind in enumerate(slides_tau):\n",
-    "    control, ad, pd, msa = slide_statistics_for_slide(jsons, slide_filter=ind, norm=norm_rois)\n",
+    "    control, ad, pd, msa = slide_statistics_for_slide(\n",
+    "        jsons, slide_filter=ind, norm=norm_rois\n",
+    "    )\n",
     "    ax = axs[int(i / 5)][i % 5]\n",
     "    ax.boxplot([control, pd, ad], showfliers=False)\n",
-    "    ax.set_xticks([1, 2, 3], ['Control', 'PD', 'AD+PD'])\n",
+    "    ax.set_xticks([1, 2, 3], [\"Control\", \"PD\", \"AD+PD\"])\n",
     "    ax.set_title(f\"Slide {ind}\")\n",
     "plt.show()"
    ]
@@ -268,16 +296,11 @@
    "outputs": [],
    "source": [
     "# Write the CSV out to do stats in JASP.\n",
-    "slide_statistics_to_csv(jsons, 'tau_counts.csv')"
+    "slide_statistics_to_csv(jsons, \"tau_counts.csv\")"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
