--- a/notebook/Work Packages/Deliverable_WP3_Multidimensional_Model.ipynb
+++ b/notebook/Work Packages/Deliverable_WP3_Multidimensional_Model.ipynb
@@ -8,22 +8,25 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir('../..')\n",
-    "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from glob import glob\n",
-    "from polygeist.utils import load_filenames_and_generate_conditions\n",
+    "\n",
+    "os.chdir(\"../..\")\n",
     "import json\n",
-    "from tqdm import tqdm\n",
-    "from skimage.transform import resize\n",
-    "from torch import nn\n",
-    "import torch.nn.functional as F\n",
-    "import torch.optim as optim\n",
     "import random\n",
     "from datetime import datetime\n",
-    "from sklearn.metrics import confusion_matrix"
+    "from glob import glob\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "from skimage.transform import resize\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from torch import nn\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "from polygeist.utils import load_filenames_and_generate_conditions"
    ]
   },
   {
@@ -52,14 +55,22 @@
    "outputs": [],
    "source": [
     "class BraakDataset(Dataset):\n",
-    "    def __init__(self, cases, root, spreadsheet='/home/brad/repos/ParkinsonsSyntheticStaining/Data/'\n",
-    "                                                'cases_for_staging_asyn_c319_1_sg.xlsx',\n",
-    "                 transform=None, slide_size=32, device=torch.device('cuda' if torch.cuda.is_available() else 'cpu'),\n",
-    "                 reduce_classes=False, reduce_type='binary'):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        cases,\n",
+    "        root,\n",
+    "        spreadsheet=\"/home/brad/repos/ParkinsonsSyntheticStaining/Data/\"\n",
+    "        \"cases_for_staging_asyn_c319_1_sg.xlsx\",\n",
+    "        transform=None,\n",
+    "        slide_size=32,\n",
+    "        device=torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\"),\n",
+    "        reduce_classes=False,\n",
+    "        reduce_type=\"binary\",\n",
+    "    ):\n",
     "        # Load Braak Stages\n",
     "        braak_staging = pd.read_excel(spreadsheet, index_col=0)\n",
     "\n",
-    "        slide_labels = ['01_A', '02_A', '04_A', '15_A', '16_A', '17_A']\n",
+    "        slide_labels = [\"01_A\", \"02_A\", \"04_A\", \"15_A\", \"16_A\", \"17_A\"]\n",
     "\n",
     "        self.data = []\n",
     "        self.targets = []\n",
@@ -70,19 +81,26 @@
     "            if case not in braak_staging.index:\n",
     "                continue\n",
     "\n",
-    "            stage = braak_staging.loc[case]['STAGE']\n",
+    "            stage = braak_staging.loc[case][\"STAGE\"]\n",
     "            if reduce_classes:\n",
-    "                if 'binary' in reduce_type:\n",
+    "                if \"binary\" in reduce_type:\n",
     "                    stage = stage > 0\n",
     "                else:\n",
     "                    stage = 0 if stage < 1 else (2 if stage == 6 else 1)\n",
     "\n",
     "            files = glob(f\"{root}/{case}*.json\")\n",
     "            for i, label in enumerate(slide_labels):\n",
-    "                find_file = next((item for item in [x if label in x else None for x in files] if item is not None), [])\n",
+    "                find_file = next(\n",
+    "                    (\n",
+    "                        item\n",
+    "                        for item in [x if label in x else None for x in files]\n",
+    "                        if item is not None\n",
+    "                    ),\n",
+    "                    [],\n",
+    "                )\n",
     "                if find_file:\n",
-    "                    with open(find_file, 'r') as fp:\n",
-    "                        density_map = np.array(json.load(fp)['densities'])\n",
+    "                    with open(find_file, \"r\") as fp:\n",
+    "                        density_map = np.array(json.load(fp)[\"densities\"])\n",
     "                        resized_map = resize(density_map, (slide_size, slide_size))\n",
     "                        density_map_array[:, :, i] = np.array(resized_map)\n",
     "\n",
@@ -118,8 +136,11 @@
     "class SeqBlock(nn.Module):\n",
     "    def __init__(self, cin, cout):\n",
     "        super().__init__()\n",
-    "        self.c1 = nn.Sequential(nn.Conv2d(cin, cin, 4), nn.Conv2d(cin, cin, 3), nn.Conv2d(cin, cout, 2))\n",
+    "        self.c1 = nn.Sequential(\n",
+    "            nn.Conv2d(cin, cin, 4), nn.Conv2d(cin, cin, 3), nn.Conv2d(cin, cout, 2)\n",
+    "        )\n",
     "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "\n",
     "    def forward(self, x):\n",
     "        return self.pool(F.relu(self.c1(x)))\n",
     "\n",
@@ -127,7 +148,7 @@
     "class CNN(nn.Module):\n",
     "    def __init__(self, binary=False):\n",
     "        super().__init__()\n",
-    "        \n",
+    "\n",
     "        self.conv1 = SeqBlock(6, 6)\n",
     "        self.drop1 = nn.Dropout(p=0.15)\n",
     "        self.conv2 = SeqBlock(6, 5)\n",
@@ -163,7 +184,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "case_conditions = load_filenames_and_generate_conditions(\"Data/filenames/asyn_files.txt\")"
+    "case_conditions = load_filenames_and_generate_conditions(\n",
+    "    \"Data/filenames/asyn_files.txt\"\n",
+    ")"
    ]
   },
   {
@@ -173,11 +196,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prop = .50\n",
+    "prop = 0.50\n",
     "pd_set = []\n",
     "con_set = []\n",
     "for k, v in case_conditions.items():\n",
-    "    if 'PD' in v:\n",
+    "    if \"PD\" in v:\n",
     "        pd_set.append(k)\n",
     "    else:\n",
     "        con_set.append(k)\n",
@@ -194,9 +217,9 @@
    "outputs": [],
    "source": [
     "pd_train = pd_set[0:sample]\n",
-    "pd_test = pd_set[sample+1:]\n",
+    "pd_test = pd_set[sample + 1 :]\n",
     "con_train = con_set[0:sample]\n",
-    "con_test = con_set[sample+1:]"
+    "con_test = con_set[sample + 1 :]"
    ]
   },
   {
@@ -207,16 +230,28 @@
    "outputs": [],
    "source": [
     "# TODO: Should these parameters be in a dict at the start of the notebook as in the previous ones?\n",
-    "dev = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "dev = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "slide_size = 64\n",
     "reduce_classes = True\n",
     "\n",
-    "train_dataset = BraakDataset(pd_train+ con_train, \"/run/media/brad/ScratchM2/asyn_rerun_128\", transform=None,\n",
-    "                             slide_size=slide_size, reduce_classes=reduce_classes, reduce_type='binary')\n",
+    "train_dataset = BraakDataset(\n",
+    "    pd_train + con_train,\n",
+    "    \"/run/media/brad/ScratchM2/asyn_rerun_128\",\n",
+    "    transform=None,\n",
+    "    slide_size=slide_size,\n",
+    "    reduce_classes=reduce_classes,\n",
+    "    reduce_type=\"binary\",\n",
+    ")\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=25, shuffle=True)\n",
     "\n",
-    "test_dataset = BraakDataset(pd_test + con_test, \"/run/media/brad/ScratchM2/asyn_rerun_128\", transform=None,\n",
-    "                            slide_size=slide_size, reduce_classes=reduce_classes, reduce_type='binary')\n",
+    "test_dataset = BraakDataset(\n",
+    "    pd_test + con_test,\n",
+    "    \"/run/media/brad/ScratchM2/asyn_rerun_128\",\n",
+    "    transform=None,\n",
+    "    slide_size=slide_size,\n",
+    "    reduce_classes=reduce_classes,\n",
+    "    reduce_type=\"binary\",\n",
+    ")\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=25, shuffle=True)"
    ]
   },
@@ -258,7 +293,9 @@
     "        data, labels = dl\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(data)\n",
-    "        classification = torch.sum(outputs * torch.arange(0, outputs.shape[1]).to(dev), 1)\n",
+    "        classification = torch.sum(\n",
+    "            outputs * torch.arange(0, outputs.shape[1]).to(dev), 1\n",
+    "        )\n",
     "        loss = criterion(classification, labels)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -268,7 +305,9 @@
     "        t_correct_history.append(correct)\n",
     "        run_count += 1\n",
     "    if epoch % 250 == 0:\n",
-    "        print(f\"Train -> Epoch {epoch} / {num_epochs} | Loss : {sum_loss}, Correct : {correct / run_count}\")\n",
+    "        print(\n",
+    "            f\"Train -> Epoch {epoch} / {num_epochs} | Loss : {sum_loss}, Correct : {correct / run_count}\"\n",
+    "        )\n",
     "    model.eval()\n",
     "    sum_loss = 0.0\n",
     "    correct = 0\n",
@@ -276,7 +315,9 @@
     "    for i, dl in enumerate(test_dataloader, 0):\n",
     "        data, labels = dl\n",
     "        outputs = model(data)\n",
-    "        classification = torch.sum(outputs * torch.arange(0, outputs.shape[1]).to(dev), 1)\n",
+    "        classification = torch.sum(\n",
+    "            outputs * torch.arange(0, outputs.shape[1]).to(dev), 1\n",
+    "        )\n",
     "        loss = criterion(classification, labels)\n",
     "        sum_loss += loss.item()\n",
     "        correct += torch.sum(torch.round(classification) == labels) / len(labels)\n",
@@ -284,10 +325,15 @@
     "        v_correct_history.append(correct)\n",
     "        run_count += 1\n",
     "    if epoch % 250 == 0:\n",
-    "        print(f\"Validation -> Epoch {epoch} / {num_epochs} | Loss : {sum_loss}, Correct : {correct / run_count}\")\n",
+    "        print(\n",
+    "            f\"Validation -> Epoch {epoch} / {num_epochs} | Loss : {sum_loss}, Correct : {correct / run_count}\"\n",
+    "        )\n",
     "    if correct / run_count > best_val and num_epochs > 3:\n",
-    "        torch.save(model.state_dict(), f\"mmclass_{datetime.now().strftime('%d_%m_%Y__%H_%M_%S')}_.pth\")\n",
-    "        best_val = correct / run_count\n"
+    "        torch.save(\n",
+    "            model.state_dict(),\n",
+    "            f\"mmclass_{datetime.now().strftime('%d_%m_%Y__%H_%M_%S')}_.pth\",\n",
+    "        )\n",
+    "        best_val = correct / run_count"
    ]
   },
   {
@@ -298,7 +344,7 @@
    "outputs": [],
    "source": [
     "# TODO: Would it make more sense to have a branch in the notebook for \"train xor load\" based on a config option?\n",
-    "model.load_state_dict(torch.load('mmclass_23_02_2023__16_09_21_.pth'))"
+    "model.load_state_dict(torch.load(\"mmclass_23_02_2023__16_09_21_.pth\"))"
    ]
   },
   {
@@ -380,11 +426,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
