--- a/notebook/Work Packages/Deliverable_WP4_Multidimensional_Model_ABeta.ipynb
+++ b/notebook/Work Packages/Deliverable_WP4_Multidimensional_Model_ABeta.ipynb
@@ -8,21 +8,24 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir('../..')\n",
-    "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "import numpy as np\n",
-    "from glob import glob\n",
-    "from polygeist.utils import load_filenames_and_generate_conditions\n",
+    "\n",
+    "os.chdir(\"../..\")\n",
     "import json\n",
-    "from tqdm import tqdm\n",
-    "from skimage.transform import resize\n",
-    "from torch import nn\n",
-    "import torch.nn.functional as F\n",
-    "import torch.optim as optim\n",
     "import random\n",
     "from datetime import datetime\n",
-    "from sklearn.metrics import confusion_matrix"
+    "from glob import glob\n",
+    "\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "from skimage.transform import resize\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from torch import nn\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "from polygeist.utils import load_filenames_and_generate_conditions"
    ]
   },
   {
@@ -49,9 +52,17 @@
    "outputs": [],
    "source": [
     "class ABetaDataset(Dataset):\n",
-    "    def __init__(self, cases, root, transform=None, slide_size=32, device=torch.device('cuda' if torch.cuda.is_available() else 'cpu'), case_conditions=None):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        cases,\n",
+    "        root,\n",
+    "        transform=None,\n",
+    "        slide_size=32,\n",
+    "        device=torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\"),\n",
+    "        case_conditions=None,\n",
+    "    ):\n",
     "\n",
-    "        slide_labels = ['1_A', '10_A', '14_A', '15_A', '09_A', '05_A']\n",
+    "        slide_labels = [\"1_A\", \"10_A\", \"14_A\", \"15_A\", \"09_A\", \"05_A\"]\n",
     "\n",
     "        self.data = []\n",
     "        self.targets = []\n",
@@ -59,20 +70,27 @@
     "\n",
     "        for case in tqdm(cases, desc=\"Loading Cases\"):\n",
     "            density_map_array = np.zeros((slide_size, slide_size, len(slide_labels)))\n",
-    "            \n",
+    "\n",
     "            if case_conditions:\n",
     "                condition = case_conditions[case]\n",
-    "                class_index = 1 if 'AD' in condition else 0\n",
+    "                class_index = 1 if \"AD\" in condition else 0\n",
     "            else:\n",
     "                # TODO: Should this be case_index or class_index?\n",
-    "                case_index = 0 if 'C' in case else 1\n",
-    "            \n",
+    "                case_index = 0 if \"C\" in case else 1\n",
+    "\n",
     "            files = glob(f\"{root}/{case}*.json\")\n",
     "            for i, label in enumerate(slide_labels):\n",
-    "                find_file = next((item for item in [x if label in x else None for x in files] if item is not None), [])\n",
+    "                find_file = next(\n",
+    "                    (\n",
+    "                        item\n",
+    "                        for item in [x if label in x else None for x in files]\n",
+    "                        if item is not None\n",
+    "                    ),\n",
+    "                    [],\n",
+    "                )\n",
     "                if find_file:\n",
-    "                    with open(find_file, 'r') as fp:\n",
-    "                        density_map = np.array(json.load(fp)['densities'])\n",
+    "                    with open(find_file, \"r\") as fp:\n",
+    "                        density_map = np.array(json.load(fp)[\"densities\"])\n",
     "                        resized_map = resize(density_map, (slide_size, slide_size))\n",
     "                        density_map_array[:, :, i] = np.array(resized_map)\n",
     "\n",
@@ -107,8 +125,11 @@
     "class SeqBlock(nn.Module):\n",
     "    def __init__(self, cin, cout):\n",
     "        super().__init__()\n",
-    "        self.c1 = nn.Sequential(nn.Conv2d(cin, cin, 4), nn.Conv2d(cin, cin, 3), nn.Conv2d(cin, cout, 2))\n",
+    "        self.c1 = nn.Sequential(\n",
+    "            nn.Conv2d(cin, cin, 4), nn.Conv2d(cin, cin, 3), nn.Conv2d(cin, cout, 2)\n",
+    "        )\n",
     "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "\n",
     "    def forward(self, x):\n",
     "        return self.pool(F.relu(self.c1(x)))\n",
     "\n",
@@ -116,7 +137,7 @@
     "class CNN(nn.Module):\n",
     "    def __init__(self, binary=False):\n",
     "        super().__init__()\n",
-    "        \n",
+    "\n",
     "        self.conv1 = SeqBlock(6, 6)\n",
     "        self.drop1 = nn.Dropout(p=0.15)\n",
     "        self.conv2 = SeqBlock(6, 5)\n",
@@ -140,7 +161,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "case_conditions = load_filenames_and_generate_conditions(\"Data/filenames/abeta_files.txt\")"
+    "case_conditions = load_filenames_and_generate_conditions(\n",
+    "    \"Data/filenames/abeta_files.txt\"\n",
+    ")"
    ]
   },
   {
@@ -153,7 +176,7 @@
     "ad_set = []\n",
     "con_set = []\n",
     "for k, v in case_conditions.items():\n",
-    "    if 'AD' in v:\n",
+    "    if \"AD\" in v:\n",
     "        ad_set.append(k)\n",
     "    else:\n",
     "        con_set.append(k)"
@@ -166,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prop = .60\n",
+    "prop = 0.60\n",
     "random.shuffle(ad_set)\n",
     "random.shuffle(con_set)\n",
     "sample = int(len(ad_set) * prop)"
@@ -180,9 +203,9 @@
    "outputs": [],
    "source": [
     "ad_train = ad_set[0:sample]\n",
-    "ad_test = ad_set[sample+1:]\n",
+    "ad_test = ad_set[sample + 1 :]\n",
     "con_train = con_set[0:sample]\n",
-    "con_test = con_set[sample+1:]"
+    "con_test = con_set[sample + 1 :]"
    ]
   },
   {
@@ -202,17 +225,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "dev = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "slide_size = 64\n",
     "reduce_classes = True\n",
     "\n",
-    "train_dataset = ABetaDataset(ad_train+ con_train, \"/run/media/brad/ScratchM2/ABeta_label_dump_64\", transform=None,\n",
-    "                             slide_size=slide_size, case_conditions=case_conditions)\n",
+    "train_dataset = ABetaDataset(\n",
+    "    ad_train + con_train,\n",
+    "    \"/run/media/brad/ScratchM2/ABeta_label_dump_64\",\n",
+    "    transform=None,\n",
+    "    slide_size=slide_size,\n",
+    "    case_conditions=case_conditions,\n",
+    ")\n",
     "\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=25, shuffle=True)\n",
     "\n",
-    "test_dataset = ABetaDataset(ad_test + con_test, \"/run/media/brad/ScratchM2/ABeta_label_dump_64\", transform=None,\n",
-    "                             slide_size=slide_size, case_conditions=case_conditions)\n",
+    "test_dataset = ABetaDataset(\n",
+    "    ad_test + con_test,\n",
+    "    \"/run/media/brad/ScratchM2/ABeta_label_dump_64\",\n",
+    "    transform=None,\n",
+    "    slide_size=slide_size,\n",
+    "    case_conditions=case_conditions,\n",
+    ")\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=25, shuffle=True)"
    ]
   },
@@ -244,7 +277,9 @@
     "        data, labels = dl\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(data)\n",
-    "        classification = torch.sum(outputs * torch.arange(0, outputs.shape[1]).to(dev), 1)\n",
+    "        classification = torch.sum(\n",
+    "            outputs * torch.arange(0, outputs.shape[1]).to(dev), 1\n",
+    "        )\n",
     "        loss = criterion(classification, labels)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -254,7 +289,9 @@
     "        t_correct_history.append(correct)\n",
     "        run_count += 1\n",
     "    if epoch % 250 == 0:\n",
-    "        print(f\"Train -> Epoch {epoch} / {num_epochs} | Loss : {sum_loss}, Correct : {correct / run_count}\")\n",
+    "        print(\n",
+    "            f\"Train -> Epoch {epoch} / {num_epochs} | Loss : {sum_loss}, Correct : {correct / run_count}\"\n",
+    "        )\n",
     "    model.eval()\n",
     "    sum_loss = 0.0\n",
     "    correct = 0\n",
@@ -262,7 +299,9 @@
     "    for i, dl in enumerate(test_dataloader, 0):\n",
     "        data, labels = dl\n",
     "        outputs = model(data)\n",
-    "        classification = torch.sum(outputs * torch.arange(0, outputs.shape[1]).to(dev), 1)\n",
+    "        classification = torch.sum(\n",
+    "            outputs * torch.arange(0, outputs.shape[1]).to(dev), 1\n",
+    "        )\n",
     "        loss = criterion(classification, labels)\n",
     "        sum_loss += loss.item()\n",
     "        correct += torch.sum(torch.round(classification) == labels) / len(labels)\n",
@@ -270,10 +309,15 @@
     "        v_correct_history.append(correct)\n",
     "        run_count += 1\n",
     "    if epoch % 250 == 0:\n",
-    "        print(f\"Validation -> Epoch {epoch} / {num_epochs} | Loss : {sum_loss}, Correct : {correct / run_count}\")\n",
+    "        print(\n",
+    "            f\"Validation -> Epoch {epoch} / {num_epochs} | Loss : {sum_loss}, Correct : {correct / run_count}\"\n",
+    "        )\n",
     "    if correct / run_count > best_val and num_epochs > 3:\n",
-    "        torch.save(model.state_dict(), f\"mmclass_{datetime.now().strftime('%d_%m_%Y__%H_%M_%S')}_.pth\")\n",
-    "        best_val = correct / run_count\n"
+    "        torch.save(\n",
+    "            model.state_dict(),\n",
+    "            f\"mmclass_{datetime.now().strftime('%d_%m_%Y__%H_%M_%S')}_.pth\",\n",
+    "        )\n",
+    "        best_val = correct / run_count"
    ]
   },
   {
@@ -283,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load('mmclass_02_03_2023__15_28_05_.pth'))"
+    "model.load_state_dict(torch.load(\"mmclass_02_03_2023__15_28_05_.pth\"))"
    ]
   },
   {
@@ -360,17 +404,12 @@
    "outputs": [],
    "source": [
     "# TODO: As in WP3 notebook re confusion matrix rendering\n",
-    "print(confusion_mat[0,:] / np.sum(confusion_mat[0,:]))\n",
-    "print(confusion_mat[1,:] / np.sum(confusion_mat[1,:]))"
+    "print(confusion_mat[0, :] / np.sum(confusion_mat[0, :]))\n",
+    "print(confusion_mat[1, :] / np.sum(confusion_mat[1, :]))"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
